src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creation_Method__c</fullName>
        <label>Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merge_Interest</fullName>
                </value>
                <value>
                    <fullName>Interest_datafix</fullName>
                </value>
                <value>
                    <fullName>SF_Interest</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destinations__c</fullName>
        <label>Destinations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Destinations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates weather user can call customer or not?</description>
        <label>DoNotCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 16 weeks</fullName>
                </value>
                <value>
                    <fullName>17+ weeks</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>3 weeks</fullName>
                </value>
                <value>
                    <fullName>4 weeks</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Extended Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FollowupDateTIme__c</fullName>
        <label>FollowupDateTIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasAddress__c</fullName>
        <formula>!( 
ISBLANK(Account.ShippingCountry) || ISBLANK( Account.ShippingCity) || ISBLANK( Account.ShippingStreet) || ISBLANK( Account.ShippingState) || ISBLANK( Account.ShippingPostalCode) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasPhoneNumber__c</fullName>
        <description>This field will decide weather user has proper phone number or not</description>
        <formula>!( 
ISBLANK(Account.PersonOtherPhone) || ISBLANK( Account.PersonMobilePhone) || ISBLANK( Account.Phone) || ISBLANK( Account.PersonHomePhone) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasPhoneNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HearAboutUs__c</fullName>
        <label>HearAboutUs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HearAboutUs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedToTravelInGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InterestedToTravelInGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <description>Logic for IsPrimary will be developed down the line..</description>
        <formula>IsPrimayOverrideForTest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrimayOverrideForTest__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Temporary field to find active opportunity, will be removed later</description>
        <label>IsPrimayOverrideForTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Likelihood_To_Book__c</fullName>
        <label>Likelihood To Book</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LikelihoodToBook</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pos_InterestId__c</fullName>
        <label>Pos_InterestId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryOpportunityID__c</fullName>
        <label>Primary OpportunityID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RankingProbability__c</fullName>
        <label>RankingProbability</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordSharingKey__c</fullName>
        <formula>If(ISPICKVAL(Program__c,&quot;MULTI&quot;),TEXT(Market__c) &amp;&quot;_&quot; &amp; TEXT(SalesOffice__c) &amp;&quot;_MULTI&quot;
,TEXT(Market__c) &amp;&quot;_&quot; &amp; TEXT(SalesOffice__c) &amp;&quot;_&quot;&amp; TEXT(Program__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordSharingKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>SalesOffice</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <description>Used to test TemplateId capture by Conga.(for automatic download)</description>
        <label>TemplateId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>this is to capture the active opportunity</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ALL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Market_mismatch_on_Opportunity</fullName>
        <active>false</active>
        <description>Opportunity should have same market as its corresponding Account.</description>
        <errorConditionFormula>And(
NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),
TEXT( Account.Market__c) &lt;&gt; TEXT(  Market__c )
)</errorConditionFormula>
        <errorMessage>There is an mismatch of Market code in Account and Opportunity.</errorMessage>
    </validationRules>
</CustomObject>